# point-cloud-workspace

./: .gitignore  CMakeLists.txt  README.md
basics/: CMakeLists.txt
basics/include/: viewer.hpp
basics/src/: passthrough.cpp  pcl_viewer_demo.cpp  viewer.cpp
beginner/: ground.pcd  rest.pcd
beginner/src/: main.cpp
features/: CMakeLists.txt  main.cpp
features/src/: surface_normals.cpp
filters/: CMakeLists.txt
filters/src/: cloth_filter.cpp  ground_removal.cpp  hag.cpp  super_voxel.cpp  voxel_sampling.cpp
ransac/: .vscode  CMakeLists.txt
ransac/src/: clustering.cpp  forest_ransac.cpp  forest_ransac_backup.cpp  opt_ransac.cpp  ransac.cpp
segmentation/: CMakeLists.txt
segmentation/src/: conditional_clustering.cpp  region_growing.cpp  trunk_detection.cpp
